# cgt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cgt.py  cgt_cuda.h  cgt_mem.c  cgt_mem.h  cgtrc.example  cgtrc_spec.ini  do_autogen.py  download_and_build_openblas.py  gen_py.py  img_ops.py  nn.py  opt.py  pylintrc  run_pylint.py
4build/: README  download_and_build_openblas.py  gen_py.py
4build/cmake/: CUDA.cmake  UseCython.cmake
4dev/: README  lintfiles.txt  pylintrc  run_pylint.py  style_check.py  valgrind-python.supp
cgt/: __init__.py  api.py  api_autogen.py  cgt.py  compilation.py  core.py  core.py.bak  cudnn_ops.py  display.py  distributions.py  exceptions.py  execution.cpp  execution.py  ez.py  im2col.py  img_ops.py  impls.py  interpreter.py  lrn.py  nn.py  numeric_diff.py  optim.py  pooling.py  utils.py
cgt/nn_ops/: cross_channel_lrn.py  cudnn_ops.py  im2col.py  max_pool_2d.py
cgt/tests/: __init__.py  _test_assert.py  _test_cycgt.py  _test_eg.py  _test_shapecheck.py  test_affine.py  test_array_wrapper.py  test_conv.py  test_devices.py  test_einsum.py  test_examples.py  test_flatvec.py  test_imgproc.py  test_inc_subtensor.py  test_informative_errors.py  test_input_conversions.py  test_linreg.py  test_multi_output.py  test_optimizers.py  test_par_interp.py  test_scalars.py  test_stack.py
cmake/: FindNumpy.cmake  UseCython.cmake
doc/: Makefile  README  build_and_view.sh  conf.py  index.rst  notebook_sphinxext1.py  requirements.txt  spelling_wordlist.txt  sphinx_preview.py  tutorial-notes.txt  upload.sh
doc/_static/: my_theme.css
examples/: README  api_tour.ipynb  caffe2cgt.py  cgt_theano_feedforward_comparison.py  cgt_theano_feedfwd_comparison.py  data_structures.ipynb  demo_char_rnn.py  demo_cifar.py  demo_mnist.py  demo_neural_turing_machine.py  demo_variational_autoencoder.py  display_tour.ipynb  example_utils.py  gru.py  internals_tour.ipynb  mnist_classification.py  mnist_newmu.py  mnist_torchstyle.py  ntm.py  parallel_interp.py  param_collection.py  seq_model.py  tutorial.ipynb
examples/bench/: cgt_gru.py  gru.py  seq_model.py  theano_gru.py
examples/broken/: caffe2cgt.py  internals_tour.ipynb  mnist_torchstyle.py  seq_model.py  seq_model2.py
include/: IRC.h  cgt_common.h  cgt_cuda.h  cgt_utils.h  cudnn_support.h  execution.h  im2col.h  lrn.cuh  pooling.h
sandbox/: parallel_interp.py
scripts/: cgt-clear-cache  cgt_clear_cache
src/: cgt_common.c  cgt_common.cpp  cgt_mem.c  cuda_setup.c  cycgt.pyx  cycgt2.pyx  execution.cpp
src/util/: ThreadPool.h
test/: _test_devices.py  _test_eg.py  _test_tuples.py  run_all_tests.py  test_affine.py  test_all.py  test_assert.py  test_conv.py  test_cycgt.py  test_devices.py  test_eg.py  test_einsum.py  test_flatvec.py  test_linreg.py  test_multi_output.py  test_scalars.py  test_tuples.py
